Update README with project setup and JavaFX config
Added project setup instructions and dependencies for JavaFX.